read only mode for diff viewer, set max widt h for editors so that they do not resize, added line wrapping option to editor, will also put diffvi ewer in a separate page due to rerendering issues

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ body {
     margin-left: 3%;
     margin-right: 3%;
     border-radius: 10px;
+    max-width: 95vw;
 }
 
 .dual-container {
@@ -27,6 +28,7 @@ body {
     display: flex;
     flex-direction: column;
     padding: 1rem;
+    max-width: 45vw;
 }
 
 .editor-title {
@@ -58,6 +60,7 @@ body {
 .CodeMirror {
     cursor: text;
     border: 1px solid #DCDCDC;
+    overflow: hidden;
 }
 
 .CodeMirror-linenumber {
@@ -70,4 +73,38 @@ body {
 
 .CodeMirror-focused {
   border: 1px solid #6495ED;
+}
+
+/* .CodeMirror-wrap pre.CodeMirror-line {
+    word-break: break-word;
+} */
+
+.CodeMirror-merge-pane {
+  display: inline-block;
+  white-space: normal;
+  vertical-align: top;
+}
+
+.diff-editor .CodeMirror {
+    cursor: default;
+}
+
+.diff-editor .CodeMirror-cursor {
+    border-left: none;
+}
+
+.diff-editor .CodeMirror-focused {
+    border: 1px solid #DCDCDC;
+}
+
+.CodeMirror-merge-gap {
+    display: none;
+}
+
+.CodeMirror-merge-r-chunk {
+    background: #c7ffce;
+}
+
+.CodeMirror-merge-l-chunk {
+    background: #ffc7c8;
 }
